2014-02-26  Michael Saboff  <msaboff@apple.com>

        Auto generate bytecode information for bytecode parser and LLInt
        https://bugs.webkit.org/show_bug.cgi?id=129181

        Reviewed by Mark Lam.

        Added ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR} to WebKit_INCLUDE_DIRECTORIES due to new
        generated Bytecodes.h include file.

        * CMakeLists.txt:

2014-02-26  Alex Christensen  <achristensen@webkit.org>

        [WinCairo] Fixed linking after disabling WebGL.

        * WebKit.vcxproj/WebKit/WebKitCFLite.props:
        Don't link to ANGLE libraries, which are no longer built.

2014-02-26  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Remove console.profiles from window.console API
        https://bugs.webkit.org/show_bug.cgi?id=116883

        Reviewed by Timothy Hatcher.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2014-02-24  Martin Robinson  <mrobinson@igalia.com>

        [GTK] generate-gtkdoc should not generate documentation for source files for unbuilt source files
        https://bugs.webkit.org/show_bug.cgi?id=128417

        Reviewed by Carlos Garcia Campos.

        * PlatformGTK.cmake: Correct the definition of WebKitGTK_ENUM_GENERATION_HEADERS and generate
        a gtkdoc-webkitgtk.cfg file to be used by generate-gtkdoc.

2014-02-24  Anders Carlsson  <andersca@apple.com>

        Add WebViewGroup
        https://bugs.webkit.org/show_bug.cgi?id=129280

        Reviewed by Dan Bernstein.

        Add new files.

        * WebKit.xcodeproj/project.pbxproj:

2014-02-24  Roger Fong  <roger_fong@apple.com>

        [WinCairo] Disable ANGLE build on WinCairo port.

        * WebKit.vcxproj/WebKit.sln:

2014-02-21  Brent Fulgham  <bfulgham@apple.com>

        Unreviewed build fix after r164505

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in: Update exports
        definition for TreeScope::getElementById.

2014-02-21  Eric Carlson  <eric.carlson@apple.com>
