@@ -1,3 +1,13 @@
+2014-02-28  Dan Bernstein  <mitz@apple.com>
+
+        [Mac] Remove MailQuirksUserScript.js
+        https://bugs.webkit.org/show_bug.cgi?id=129536
+
+        Reviewed by Andy Estes.
+
+        * Configurations/WebKit.xcconfig: Removed from EXCLUDED_SOURCE_FILE_NAMES_iphoneos.
+        * Misc/MailQuirksUserScript.js: Removed. This file has been unused since r147447.
+
 2014-02-28  Timothy Hatcher  <timothy@apple.com>
 
         Properly handle when Test.html is not present in Production builds.
