@@ -1,3 +1,12 @@
+2014-02-28  Dan Bernstein  <mitz@apple.com>
+
+        [Mac] Remove MailQuirksUserScript.js
+        https://bugs.webkit.org/show_bug.cgi?id=129536
+
+        Reviewed by Andy Estes.
+
+        * WebKit.xcodeproj/project.pbxproj: Removed reference to the file.
+
 2014-02-26  Michael Saboff  <msaboff@apple.com>
 
         Auto generate bytecode information for bytecode parser and LLInt
